--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -14,9 +14,17 @@
     "jsx": "preserve",
     "incremental": true,
     "plugins": [{ "name": "next" }],
-    "baseUrl": ".",                       // <- add this
-    "paths": { "@/*": ["src/*"] }         // <- no leading "./" needed
+    "baseUrl": ".",                     // ✅ ensures `@/` works
+    "paths": {
+      "@/*": ["src/*"]                  // ✅ no "./" in front
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
+
